🎨 prevent main nav from collapsing

--- a/_src/assets/css/organisms/_nav.pcss
+++ b/_src/assets/css/organisms/_nav.pcss
@@ -1,5 +1,6 @@
 .site-nav {
   align-self: stretch;
+  min-height: var(--layout-header-height);
   overflow: hidden;
 
   & > ul {
